# LaundryKhalas

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/whatsapp-agent/: .env.example  .gitignore  Dockerfile  db.py  main.py  models.py  pyproject.toml  rules.py  schemas.py  settings.py  whatsapp_agent_test_report.md
apps/whatsapp-agent/api/: admin_pricing.py  auth.py  catalogue.py  chat.py  conversations.py  deps.py  evolution_webhooks.py  flags.py  health.py  orders.py  public_pricing.py  seo_agents.py  service_taxonomy.py  settings_route.py  tickets.py  users.py  webhooks.py
apps/whatsapp-agent/channels/: evolution_whatsapp.py  meta_whatsapp.py  mock_whatsapp.py  whatsapp_base.py
apps/whatsapp-agent/config/: agent_tone_rules.json  escalation_rules.json  laundry_catalogue.json  laundry_services.json  laundrykhalaas_knowledge.json  laundrykhalas_knowledge.json  mock_mode_rules.json  pickup_instructions.json  quick_actions.json  whatsapp_agent_rules.json
apps/whatsapp-agent/db/: __init__.py  database.py
apps/whatsapp-agent/knowledge_base/: dummy_orders.json  laundry_class_knowledge_base.md
apps/whatsapp-agent/laundry_class/: __init__.py  config.py  flows.py  graph.py  handoff.py  intents.py  knowledge_base.py  observability.py  responder.py  runtime.py  slots.py  state.py
apps/whatsapp-agent/llm/: service.py
apps/whatsapp-agent/scripts/: _safety.py  apply_scheduled_pricing.py  clear_draft_for_number.py  expire_drafts.py  lc_chat.py  lc_run_testcases.py  reset_supabase_test_data.py  seed_admin_user.py  seed_service_catalogue.py  seed_supabase_test_data.py  verify_evolution_connection.py  verify_service_taxonomy.py  verify_supabase_connection.py
apps/whatsapp-agent/seo_agents/: __init__.py  approvals.py  catalog.py  dashboard_data.py  decisions.py  mock_sources.py  reports.py  runner.py  schemas.py  store.py  taxonomy.py
apps/whatsapp-agent/services/: auth.py  auto_reply.py  booking_flow.py  catalogue.py  domain_guard.py  escalation.py  notifications.py  order_extraction.py  order_store.py  price_resolver.py  pricing.py  pricing_management.py  pricing_permissions.py  privacy.py  service_selection.py  storage.py  taxonomy_sync.py
apps/whatsapp-agent/tests/: conftest.py  test_agent_modes.py  test_agent_rules.py  test_auth_rbac.py  test_auto_reply.py  test_auto_reply_gate.py  test_chat.py  (+22 more)
(+500 files in other folders)
