[project]
name = "laundrykhalas-whatsapp-agent"
version = "0.1.0"
description = "LaundryKhalas WhatsApp Operations Agent - mock-first backend foundation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "redis>=5.0.4",
    "celery>=5.4.0",
    "langgraph>=0.1.5",
    "python-dotenv>=1.0.1",
    "structlog>=24.1.0",
    "geoalchemy2>=0.15.0",
    "pgvector>=0.2.5",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "aiosqlite>=0.20.0",
    "ruff>=0.4.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["app/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
