[project]
name = "laundrykhalaas-whatsapp-agent-standalone"
version = "0.1.0"
description = "Standalone LaundryKhalaas WhatsApp Agent - focused laundry/cleaning customer assistant, domain-guarded, mock-first."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    "anthropic>=0.34.0",
    # Laundry Class agent (LangChain + LangGraph, mock-first)
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.4.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["services*", "channels*", "llm*", "agents*", "api*", "laundry_class*"]
